examples/test/testpolicy5035.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5035
  namespace: namespace92
spec:
  podSelector:
    matchLabels:
      key6: value16
      key17: value2
      key16: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value6
          key16: value11
      podSelector:
        matchLabels:
          key44: value22
          key30: value34
          key48: value35
